--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   hive_generator: ^2.0.0
   build_runner: ^2.3.3
+  confetti: ^0.7.0
 
   flutter_launcher_icons: ^0.14.1
 
