--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dev_dependencies:
   hive_generator: ^2.0.0
   build_runner: ^2.3.3
   confetti: ^0.7.0
+  vibration: ^1.8.4
+  audioplayers: ^5.2.1
 
   flutter_launcher_icons: ^0.14.1
 
@@ -58,6 +60,7 @@ flutter:
     - assets/language_EN.png
     - assets/language_TR.png
     - assets/logo.png
+    - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
