--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   sudoku_solver_generator: ^2.0.0
   wakelock_plus: ^1.0.0
   win32: ^5.8.0 # Mettez à jour à la dernière version
+  google_mobile_ads: ^3.0.0
+
 
 dev_dependencies:
   change_app_package_name: ^1.0.0
