--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,7 @@ dev_dependencies:
   hive_generator: ^2.0.0
   build_runner: ^2.3.3
   confetti: ^0.7.0
-  vibration: ^1.8.4
-  audioplayers: ^5.2.1
+
 
   flutter_launcher_icons: ^0.14.1
 
@@ -53,10 +52,6 @@ flutter_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
@@ -64,5 +59,5 @@ flutter:
     - assets/language_EN.png
     - assets/language_TR.png
     - assets/app_icon.png
-    - assets/sounds/
+    - assets/
 
