--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   wakelock_plus: ^1.0.0
   win32: ^5.8.0 # Mettez à jour à la dernière version
   google_mobile_ads: ^3.0.0
+  fluttertoast: ^8.2.1
 
 
 dev_dependencies:
